Loop over each candidate and add list item with name and votes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <!-- I'm ready, I'm ready, I'm ready! -->
+    <h1>Candidate List</h1>
+    <ul id="candidate-list">
+
+    </ul>
   </body>
 </html>
